Fix nota bene spacing (#1136)

--- a/manon/components/form-fieldset.scss
+++ b/manon/components/form-fieldset.scss
@@ -87,7 +87,7 @@ main div form {
     }
 
     .nota-bene {
-      padding-bottom: 0;
+      padding-bottom: theme.$form-fieldset-nota-bene-padding-bottom;
     }
   }
 }
